adding support for the webhook to the example app